Don't load LastUsedFilter using Menu Filter

When the filter was called from the Menu, we dont load the LastUsedFilter as we change the filter later and 
some filters may take a long time to process.

BUG:416706